CLOSED FIXED38370
[Qt] GraphicsLayer: depth-test causes flicker in certain situations
https://bugs.webkit.org/show_bug.cgi?id=38370
Summary [Qt] GraphicsLayer: depth-test causes flicker in certain situations
Noam Rosenthal
Reported 2010-04-29 20:32:39 PDT
the depth test for stacking items in 3D space is inaccurate - suggesting to remove it for this version.
Attachments
Remove the simplistic depth test (1.82 KB, patch)
2010-04-29 20:36 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2010-04-29 20:36:37 PDT
Created attachment 54778 [details] Remove the simplistic depth test
Eric Seidel (no email)
Comment 2 2010-04-30 11:46:36 PDT
Comment on attachment 54778 [details] Remove the simplistic depth test OK. Do we have no way to test this using repaint tests?
Noam Rosenthal
Comment 3 2010-04-30 14:33:21 PDT
Actually, now that you mention it, the tests in LayoutTests/compositing/geometry seem to test this, and some of them regressed. This patch is still good - but I probably need a couple of more patches to fix those regressions.
Noam Rosenthal
Comment 4 2010-05-02 02:52:08 PDT
Sorry, my last comment was meant for another bug. There's no way to test this because the depth-test functionality is not specified anywhere. The depth-test functionality is a completely platform-specific choice.
WebKit Commit Bot
Comment 5 2010-05-12 23:27:50 PDT
Comment on attachment 54778 [details] Remove the simplistic depth test Clearing flags on attachment: 54778 Committed r59347: <http://trac.webkit.org/changeset/59347>
WebKit Commit Bot
Comment 6 2010-05-12 23:27:57 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 7 2010-05-14 01:23:41 PDT
Revision r59347 cherry-picked into qtwebkit-2.0 with commit 88ea502ee97de59515558c299272cc3420048d68
Note You need to log in before you can comment on or make changes to this bug.