2010-05-12  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayer: depth-test causes flicker in certain situations

        This patch removes the simplistic 2D depth test as it leads to flickering side effects.
        https://bugs.webkit.org/show_bug.cgi?id=38370

        Tested by http://webkit.org/blog-files/3d-transforms/morphing-cubes.html

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::GraphicsLayerQtImpl::updateTransform):

Canonical link: https://commits.webkit.org/50536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59347 268f45cc-cd09-0410-ab3c-d52691b4dbfc